--- a/backend/static/css/custom.css
+++ b/backend/static/css/custom.css
@@ -7,3 +7,35 @@
 .mainCtr { 
     min-height: 90vh;
 }
+
+.skeleton {
+    animation: skeleton-loading 1s linear infinite alternate;
+}
+
+@keyframes skeleton-loading {
+    0% {
+        background-color: hsl(200, 20%, 80%);
+    }
+    100% {
+        background-color: hsl(200, 20%, 95%);
+    }
+}
+
+.skeleton-text {
+    width: 100%;
+    height: 0.7rem;
+    margin-bottom: 0.5rem;
+    border-radius: 0.25rem;
+}
+  
+.skeleton-text-body {
+    width: 75%;
+}
+  
+.centered {
+    text-align: center;
+}
+
+.card-img-top {
+    height:200px;
+}
